--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,18 +35,15 @@ contrib = []
 docs-only = []
 
 [build-dependencies]
+binding-generator = {package = "opencv-binding-generator", version = "0.7", path = "binding-generator", optional = true}
 cc = {version = "1.0", features = ["parallel"]}
+clang = {version = "0.23", features = ["clang_6_0"], optional = true}
 glob_crate = {package = "glob", version = "0.3"}
 once_cell = "1.0"
+pkg-config = "0.3"
 rayon = "1.0"
 semver = "0.9"
-binding-generator = {package = "opencv-binding-generator", version = "0.7", path = "binding-generator", optional = true}
-clang = {version = "0.23", features = ["clang_6_0"], optional = true}
-
-[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
-pkg-config = "0.3"
-
-[target.'cfg(target_env = "msvc")'.build-dependencies]
+shlex = "0.1"
 vcpkg = "0.2"
 
 [dev-dependencies]
