--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ opencv-34 = []
 opencv-4 = []
 contrib = []
 docs-only = []
+clang-runtime = ["binding-generator/clang-runtime"]
 
 [build-dependencies]
 binding-generator = {package = "opencv-binding-generator", version = "0.9", path = "binding-generator", optional = true}
