--- a/binding-generator/Cargo.toml
+++ b/binding-generator/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2018"
 
 [lib]
 
+[features]
+
+clang-runtime = ["clang/runtime", "clang-sys/runtime"]
+
 [dependencies]
 clang = {version = "0.23", features = ["clang_6_0"]}
 clang-sys = {version = "0.28", features = ["clang_6_0"]}
