--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ once_cell = "1.0"
 
 [features]
 default = ["opencv-4"]
-buildtime-bindgen = ["binding-generator", "clang"]
+buildtime-bindgen = ["binding-generator", "clang", "jobserver"]
 clang-runtime = ["binding-generator/clang-runtime"]
 opencv-32 = []
 opencv-34 = []
@@ -41,9 +41,9 @@ clang = {version = "0.23", features = ["clang_6_0"], optional = true}
 glob_crate = {package = "glob", version = "0.3"}
 once_cell = "1.0"
 pkg-config = "0.3"
-rayon = "1.0"
 semver = "0.10"
 shlex = "0.1"
+jobserver = {version = "0.1", optional = true}
 vcpkg = "0.2"
 
 [dev-dependencies]
