--- a/.github/workflows/opencv-rust.yml
+++ b/.github/workflows/opencv-rust.yml
@@ -148,3 +148,18 @@ jobs:
         with:
           name: generated-failed-bindings-${{ runner.os }}-3.2.0
           path: target
+
+  check:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          default: true
+
+      - name: Run a self-check
+        run: ci/check.sh
+        shell: bash
