--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ num-traits = "0.2"
 once_cell = "1.0"
 
 [features]
-default = ["opencv-4"]
+default = ["opencv-4", "buildtime-bindgen"]
 buildtime-bindgen = ["binding-generator", "clang", "jobserver"]
 clang-runtime = ["clang/runtime"]
 opencv-32 = []
