--- a/.github/workflows/opencv-rust.yml
+++ b/.github/workflows/opencv-rust.yml
@@ -66,7 +66,7 @@ jobs:
         if: failure()
         with:
           name: generated-failed-bindings-${{ runner.os }}-${{ matrix.version.opencv }}
-          path: target
+          path: bindings
 
   bin:
     strategy:
@@ -116,7 +116,7 @@ jobs:
         if: failure()
         with:
           name: generated-failed-bindings-${{ runner.os }}-${{ matrix.version.choco }}
-          path: target
+          path: bindings
 
   lnx-32:
     runs-on: ubuntu-18.04
@@ -147,7 +147,7 @@ jobs:
         if: failure()
         with:
           name: generated-failed-bindings-${{ runner.os }}-3.2.0
-          path: target
+          path: bindings
 
   check:
     runs-on: ubuntu-20.04
