--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,11 +57,11 @@ contrib = []
 docs-only = []
 
 [build-dependencies]
-binding-generator = {package = "opencv-binding-generator", version = "0.16.2", path = "binding-generator", optional = true}
-cc = {version = "1.0", features = ["parallel"]}
-clang = {version = "0.24", features = ["clang_6_0"], optional = true}
-glob_crate = {package = "glob", version = "0.3"}
-jobserver = {version = "0.1", optional = true}
+binding-generator = { package = "opencv-binding-generator", version = "0.16.2", path = "binding-generator", optional = true }
+cc = { version = "1.0", features = ["parallel"] }
+clang = { version = "0.24", features = ["clang_6_0"], optional = true }
+glob = "0.3"
+jobserver = { version = "0.1", optional = true }
 once_cell = "1.0"
 pkg-config = "0.3"
 semver = "0.10"
