--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/twistedfall/opencv-rust"
 readme = "README.md"
 keywords = ["opencv", "vision"]
 license = "MIT"
-version = "0.46.0"
+version = "0.46.1-pre.0"
 edition = "2018"
 authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Pro <twisted.fall@gmail.com>"]
 autoexamples = false # cuda example doesn't compile on just any system
