--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ repository = "https://github.com/twistedfall/opencv-rust"
 readme = "README.md"
 keywords = ["opencv", "vision"]
 license = "MIT"
-version = "0.49.1"
+version = "0.50.0"
 edition = "2018"
-authors = ["Mathieu Poumeyrol <kali@zoy.org>", "Pro <twisted.fall@gmail.com>"]
+authors = ["Pro <twisted.fall@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
 autoexamples = false # cuda example doesn't compile on just any system
 
 [lib]
@@ -57,7 +57,7 @@ contrib = []
 docs-only = []
 
 [build-dependencies]
-binding-generator = { package = "opencv-binding-generator", version = "0.23.0", path = "binding-generator", optional = true }
+binding-generator = { package = "opencv-binding-generator", version = "0.24.0", path = "binding-generator", optional = true }
 cc = { version = "1.0", features = ["parallel"] }
 clang = { version = "1.0", features = ["clang_6_0"], optional = true }
 dunce = "1.0"
