--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,8 +55,7 @@ num-traits = "0.2"
 once_cell = "1.0"
 
 [features]
-default = ["opencv-4", "buildtime-bindgen"]
-buildtime-bindgen = ["binding-generator", "clang", "jobserver"]
+default = ["opencv-4"]
 clang-runtime = ["clang/runtime"]
 opencv-32 = []
 opencv-34 = []
@@ -64,12 +63,12 @@ opencv-4 = []
 docs-only = []
 
 [build-dependencies]
-binding-generator = { package = "opencv-binding-generator", version = "0.26.0", path = "binding-generator", optional = true }
+binding-generator = { package = "opencv-binding-generator", version = "0.26.0", path = "binding-generator" }
 cc = { version = "1.0", features = ["parallel"] }
-clang = { version = "1.0", features = ["clang_6_0"], optional = true }
+clang = { version = "1.0", features = ["clang_6_0"] }
 dunce = "1.0"
 glob = "0.3"
-jobserver = { version = "0.1", optional = true }
+jobserver = "0.1"
 once_cell = "1.0"
 pkg-config = "0.3"
 semver = "0.11"
