--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,11 +55,7 @@ num-traits = "0.2"
 once_cell = "1.0"
 
 [features]
-default = ["opencv-4"]
 clang-runtime = ["clang/runtime"]
-opencv-32 = []
-opencv-34 = []
-opencv-4 = []
 docs-only = []
 
 [build-dependencies]
@@ -81,4 +77,4 @@ matches = "0.1"
 
 [package.metadata.docs.rs]
 no-default-features = true
-features = ["opencv-4", "docs-only"]
+features = ["docs-only"]
