--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,70 @@ once_cell = "1.0"
 clang-runtime = ["clang/runtime"]
 docs-only = []
 
+# OpenCV modules
+alphamat = []
+aruco = []
+barcode = []
+bgsegm = []
+bioinspired = []
+calib3d = []
+ccalib = []
+core = []
+dnn = []
+dnn_superres = []
+dpm = []
+face = []
+features2d = []
+flann = []
+freetype = []
+fuzzy = []
+hfs = []
+highgui = []
+img_hash = []
+imgcodecs = []
+imgproc = []
+intensity_transform = []
+line_descriptor = []
+mcc = []
+ml = []
+objdetect = []
+optflow = []
+phase_unwrapping = []
+photo = []
+plot = []
+quality = []
+rapid = []
+rgbd = []
+saliency = []
+sfm = []
+shape = []
+stereo = []
+stitching = []
+structured_light = []
+superres = []
+surface_matching = []
+text = []
+tracking = []
+video = []
+videoio = []
+videostab = []
+viz = []
+wechat_qrcode = []
+xfeatures2d = []
+ximgproc = []
+xobjdetect = []
+xphoto = []
+
+default = [
+    "alphamat", "aruco", "barcode", "bgsegm", "bioinspired", "calib3d", "ccalib", "core",
+    "dnn", "dnn_superres", "dpm", "face", "features2d", "flann", "freetype", "fuzzy", "hfs",
+    "highgui", "img_hash", "imgcodecs", "imgproc", "intensity_transform", "line_descriptor", "mcc",
+    "ml", "objdetect", "optflow", "phase_unwrapping", "photo", "plot", "quality", "rapid", "rgbd",
+    "saliency", "sfm", "shape", "stereo", "stitching", "structured_light", "superres",
+    "surface_matching", "text", "tracking", "video", "videoio", "videostab", "viz", "wechat_qrcode",
+    "xfeatures2d", "ximgproc", "xobjdetect", "xphoto"
+]
+
 [build-dependencies]
 binding-generator = { package = "opencv-binding-generator", version = "0.32.0", path = "binding-generator" }
 cc = { version = "1.0", features = ["parallel"] }
