--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,8 +60,21 @@ once_cell = "1.0"
 [features]
 clang-runtime = ["clang/runtime"]
 docs-only = []
+default = ["all-modules"]
 
 # OpenCV modules
+all-modules = [
+    "alphamat", "aruco", "barcode", "bgsegm", "bioinspired", "calib3d", "ccalib", "cudaarithm",
+    "cudabgsegm", "cudacodec", "cudafeatures2d", "cudafilters", "cudaimgproc", "cudaobjdetect",
+    "cudaoptflow", "cudastereo", "cudawarping", "cvv", "dnn", "dnn_superres", "dpm", "face",
+    "features2d", "flann", "freetype", "fuzzy", "gapi", "hdf", "hfs", "highgui", "img_hash",
+    "imgcodecs", "imgproc", "intensity_transform", "line_descriptor", "mcc", "ml", "objdetect",
+    "optflow", "ovis", "phase_unwrapping", "photo", "plot", "quality", "rapid", "rgbd", "saliency",
+    "sfm", "shape", "stereo", "stitching", "structured_light", "superres", "surface_matching",
+    "text", "tracking", "video", "videoio", "videostab", "viz", "xfeatures2d", "ximgproc",
+    "xobjdetect", "xphoto", "wechat_qrcode",
+]
+
 alphamat = []
 aruco = []
 barcode = []
@@ -69,7 +82,17 @@ bgsegm = []
 bioinspired = []
 calib3d = []
 ccalib = []
-core = []
+cudaarithm = []
+cudabgsegm = []
+cudacodec = []
+cudafeatures2d = []
+cudafilters = []
+cudaimgproc = []
+cudaobjdetect = []
+cudaoptflow = []
+cudastereo = []
+cudawarping = []
+cvv = []
 dnn = []
 dnn_superres = []
 dpm = []
@@ -78,6 +101,8 @@ features2d = []
 flann = []
 freetype = []
 fuzzy = []
+gapi = []
+hdf = []
 hfs = []
 highgui = []
 img_hash = []
@@ -89,6 +114,7 @@ mcc = []
 ml = []
 objdetect = []
 optflow = []
+ovis = []
 phase_unwrapping = []
 photo = []
 plot = []
@@ -109,21 +135,11 @@ video = []
 videoio = []
 videostab = []
 viz = []
-wechat_qrcode = []
 xfeatures2d = []
 ximgproc = []
 xobjdetect = []
 xphoto = []
-
-default = [
-    "alphamat", "aruco", "barcode", "bgsegm", "bioinspired", "calib3d", "ccalib", "core",
-    "dnn", "dnn_superres", "dpm", "face", "features2d", "flann", "freetype", "fuzzy", "hfs",
-    "highgui", "img_hash", "imgcodecs", "imgproc", "intensity_transform", "line_descriptor", "mcc",
-    "ml", "objdetect", "optflow", "phase_unwrapping", "photo", "plot", "quality", "rapid", "rgbd",
-    "saliency", "sfm", "shape", "stereo", "stitching", "structured_light", "superres",
-    "surface_matching", "text", "tracking", "video", "videoio", "videostab", "viz", "wechat_qrcode",
-    "xfeatures2d", "ximgproc", "xobjdetect", "xphoto"
-]
+wechat_qrcode = []
 
 [build-dependencies]
 binding-generator = { package = "opencv-binding-generator", version = "0.32.0", path = "binding-generator" }
