--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,86 @@ once_cell = "1.0"
 [features]
 clang-runtime = ["clang/runtime"]
 docs-only = []
+default = ["all-modules"]
+
+# OpenCV modules
+all-modules = [
+    "alphamat", "aruco", "barcode", "bgsegm", "bioinspired", "calib3d", "ccalib", "cudaarithm",
+    "cudabgsegm", "cudacodec", "cudafeatures2d", "cudafilters", "cudaimgproc", "cudaobjdetect",
+    "cudaoptflow", "cudastereo", "cudawarping", "cvv", "dnn", "dnn_superres", "dpm", "face",
+    "features2d", "flann", "freetype", "fuzzy", "gapi", "hdf", "hfs", "highgui", "img_hash",
+    "imgcodecs", "imgproc", "intensity_transform", "line_descriptor", "mcc", "ml", "objdetect",
+    "optflow", "ovis", "phase_unwrapping", "photo", "plot", "quality", "rapid", "rgbd", "saliency",
+    "sfm", "shape", "stereo", "stitching", "structured_light", "superres", "surface_matching",
+    "text", "tracking", "video", "videoio", "videostab", "viz", "xfeatures2d", "ximgproc",
+    "xobjdetect", "xphoto", "wechat_qrcode",
+]
+
+alphamat = []
+aruco = []
+barcode = []
+bgsegm = []
+bioinspired = []
+calib3d = []
+ccalib = []
+cudaarithm = []
+cudabgsegm = []
+cudacodec = []
+cudafeatures2d = []
+cudafilters = []
+cudaimgproc = []
+cudaobjdetect = []
+cudaoptflow = []
+cudastereo = []
+cudawarping = []
+cvv = []
+dnn = []
+dnn_superres = []
+dpm = []
+face = []
+features2d = []
+flann = []
+freetype = []
+fuzzy = []
+gapi = []
+hdf = []
+hfs = []
+highgui = []
+img_hash = []
+imgcodecs = []
+imgproc = []
+intensity_transform = []
+line_descriptor = []
+mcc = []
+ml = []
+objdetect = []
+optflow = []
+ovis = []
+phase_unwrapping = []
+photo = []
+plot = []
+quality = []
+rapid = []
+rgbd = []
+saliency = []
+sfm = []
+shape = []
+stereo = []
+stitching = []
+structured_light = []
+superres = []
+surface_matching = []
+text = []
+tracking = []
+video = []
+videoio = []
+videostab = []
+viz = []
+xfeatures2d = []
+ximgproc = []
+xobjdetect = []
+xphoto = []
+wechat_qrcode = []
 
 [build-dependencies]
 binding-generator = { package = "opencv-binding-generator", version = "0.33.0", path = "binding-generator" }
