Add module dependencies to cargo features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,26 +133,26 @@ default = [
 alphamat = []
 aruco = []
 barcode = []
-bgsegm = []
+bgsegm = ["video"]
 bioinspired = []
-calib3d = []
-ccalib = []
+calib3d = ["features2d"]
+ccalib = ["features2d"]
 cudaarithm = []
-cudabgsegm = []
+cudabgsegm = ["video"]
 cudacodec = []
-cudafeatures2d = []
+cudafeatures2d = ["features2d"]
 cudafilters = []
-cudaimgproc = []
-cudaobjdetect = []
+cudaimgproc = ["imgproc"]
+cudaobjdetect = ["objdetect"]
 cudaoptflow = []
-cudastereo = []
+cudastereo = ["calib3d"]
 cudawarping = []
 cvv = []
 dnn = []
 dnn_superres = []
 dpm = []
-face = []
-features2d = []
+face = ["objdetect"]
+features2d = ["flann"]
 flann = []
 freetype = []
 fuzzy = []
@@ -165,35 +165,35 @@ imgcodecs = []
 imgproc = []
 intensity_transform = []
 line_descriptor = []
-mcc = []
+mcc = ["dnn"]
 ml = []
 objdetect = []
-optflow = []
+optflow = ["video"]
 ovis = []
 phase_unwrapping = []
 photo = []
 plot = []
-quality = []
+quality = ["ml"]
 rapid = []
 rgbd = []
 saliency = []
 sfm = []
 shape = []
 stereo = []
-stitching = []
+stitching = ["features2d", "imgproc"]
 structured_light = []
 superres = []
 surface_matching = []
 text = []
-tracking = []
+tracking = ["video"]
 video = []
 videoio = []
-videostab = []
+videostab = ["features2d"]
 viz = []
-xfeatures2d = []
-ximgproc = []
+xfeatures2d = ["features2d"]
+ximgproc = ["calib3d"]
 xobjdetect = []
-xphoto = []
+xphoto = ["photo"]
 wechat_qrcode = []
 
 [build-dependencies]
