--- a/.github/workflows/opencv-rust.yml
+++ b/.github/workflows/opencv-rust.yml
@@ -24,28 +24,17 @@ jobs:
         version:
           - opencv: 3.4.17
           - opencv: 4.5.5
-        compiler:
-          - cc: gcc
-            cxx: g++
-          - cc: clang
-            cxx: clang++
         exclude:
           - os:
               family: osx
             version:
               opencv: 3.4.17
-          - os:
-              family: osx
-            compiler:
-              cc: gcc
     runs-on: ${{ matrix.os.image }}
     env:
       OS_FAMILY: ${{ matrix.os.family }}
       RUST_TOOLCHAIN: ${{ matrix.rust }}
       Atlas_ROOT_DIR: /usr/include/ # for cmake to find lapacke.h
       OPENCV_VERSION: ${{ matrix.version.opencv }}
-      CC: ${{ matrix.compiler.cc }}
-      CXX: ${{ matrix.compiler.cxx }}
     steps:
       - uses: actions/checkout@v2
 
@@ -53,7 +42,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/build
-          key: ${{ runner.os }}-${{ matrix.version.opencv }}-${{ matrix.compiler.cc }}-build
+          key: ${{ runner.os }}-${{ matrix.version.opencv }}-build
 
       - name: Install dependencies
         run: ci/install.sh
