Drop the clang-runtime feature and make this behavior default
The change is imposed by the upstream clang v2 crate change, it's no longer possible to share or send the `Clang` between threads.

--- a/ci/test-proj/Cargo.toml
+++ b/ci/test-proj/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "test-proj-clang-runtime"
+name = "test-proj"
 description = "Helper to test whether project using opencv dependency compiles"
 version = "0.1.0"
 authors = ["Pro"]
 edition = "2018"
 
 [dependencies]
-opencv = { path = "../..", features = ["clang-runtime"] }
+opencv = { path = "../.." }
 
 [workspace]
