--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,21 +55,21 @@ name = "window"
 [dependencies]
 libc = "0.2"
 num-traits = "0.2"
-once_cell = "1.0"
+once_cell = "1"
 # version 0.8.20 doesn't contain the deficiency mentioned in https://deps.rs/crate/opencv/0.59.0#vulnerabilities
 rgb = { version = "0.8.20", features = ["argb"], optional = true }
 
 [build-dependencies]
 binding-generator = { package = "opencv-binding-generator", version = "0.44.0", path = "binding-generator" }
-cc = { version = "1.0", features = ["parallel"] }
-clang = { version = "1.0", features = ["clang_6_0"] }
-dunce = "1.0"
+cc = { version = "1", features = ["parallel"] }
+clang = { version = "2", features = ["clang_6_0", "runtime"] }
+dunce = "1"
 glob = "0.3"
 jobserver = "0.1"
-once_cell = "1.0"
+once_cell = "1"
 pkg-config = "0.3"
-semver = "1.0"
-shlex = "1.0"
+semver = "1"
+shlex = "1"
 # vcpkg-0.2.9 is the first one that has accessible find_vcpkg_root()
 vcpkg = "0.2.9"
 
@@ -77,7 +77,6 @@ vcpkg = "0.2.9"
 matches = "0.1"
 
 [features]
-clang-runtime = ["clang/runtime"]
 docs-only = []
 default = [
 	"alphamat",
