--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,7 @@ cc = { version = "1", features = ["parallel"] }
 clang = { version = "2", features = ["clang_6_0", "runtime"] }
 dunce = "1"
 glob = "0.3"
-jobserver = "0.1"
+jobslot = "0.2"
 once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
