--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,10 @@ members = ["binding-generator"]
 [[example]]
 name = "discrete_fourier_transform"
 
+# requires Graph-API module
+#[[example]]
+#name = "gapi_api_example"
+
 [[example]]
 name = "opencl"
 
@@ -104,7 +108,7 @@ default = [
 	"flann",
 	"freetype",
 	"fuzzy",
-#	"gapi",
+	"gapi",
 	"hdf",
 	"hfs",
 	"highgui",
