--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,8 @@ binding-generator = { package = "opencv-binding-generator", version = "0.52.0", 
 cc = { version = "1", features = ["parallel"] }
 clang = { version = "2", features = ["clang_6_0", "runtime"] }
 dunce = "1"
-jobserver = "0.1"
+# jobserver-0.1.25 is the first one that has Client::available() method
+jobserver = "0.1.25"
 once_cell = "1"
 pkg-config = "0.3"
 semver = "1"
