--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.76.0"
 edition = "2021"
 authors = ["Pro <twisted.fall@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
 autoexamples = false # not all examples compile on just any system
+exclude = ["/.github", "/ci", "/tools", "release.toml", "rustfmt.toml"]
 
 [lib]
 doctest = false
