--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ repository = "https://github.com/twistedfall/opencv-rust"
 readme = "README.md"
 keywords = ["opencv", "vision"]
 license = "MIT"
-version = "0.76.0"
+version = "0.76.1"
 edition = "2021"
+resolver = "1"
 authors = ["Pro <twisted.fall@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
 autoexamples = false # not all examples compile on just any system
 exclude = ["/.github", "/ci", "/tools", "release.toml", "rustfmt.toml"]
@@ -65,7 +66,7 @@ once_cell = "1"
 rgb = { version = "0.8.20", features = ["argb"], optional = true }
 
 [build-dependencies]
-binding-generator = { package = "opencv-binding-generator", version = "0.54.0", path = "binding-generator" }
+opencv-binding-generator = { version = "0.54.0", path = "binding-generator" }
 cc = { version = "1", features = ["parallel"] }
 clang = { version = "2", features = ["clang_6_0", "runtime"] }
 dunce = "1"
