--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ keywords = ["opencv", "vision"]
 license = "MIT"
 version = "0.78.2"
 edition = "2021"
+rust-version = "1.59"
 resolver = "1"
 authors = ["Pro <twisted.fall@gmail.com>", "Mathieu Poumeyrol <kali@zoy.org>"]
 autoexamples = false # not all examples compile on just any system
