Don't require `runtime` feature of `clang`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,7 @@ rgb = { version = "0.8.20", features = ["argb"], optional = true }
 [build-dependencies]
 opencv-binding-generator = { version = "0.62.0", path = "binding-generator" }
 cc = { version = "1", features = ["parallel"] }
-clang = { version = "2", features = ["clang_6_0", "runtime"] }
+clang = { version = "2", features = ["clang_6_0"] }
 dunce = "1"
 # jobserver-0.1.25 is the first one that has Client::available() method
 jobserver = "0.1.25"
